add JAVAFX_HOME env variable to Netbeans run action